--- a/css/background.css
+++ b/css/background.css
@@ -7,7 +7,7 @@ body, html {
     background: linear-gradient(135deg, #74ebd5, #ACB6E5); /* Gradient background */
   
 }
-.logout-icon {
+.fa-bars {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -16,9 +16,45 @@ body, html {
     color: #007BFF;
 }
 
+.logout-icon {
+    font-size: 18px;
+    color: #007BFF;
+    padding-right: 10px;
+}
+
 .logout-icon:hover {
     color: red;
 }
+
+.dropdown-menu {
+    display: none; /* Ẩn menu mặc định */
+    position: absolute;
+    top: 60px; /* Điều chỉnh khoảng cách với nút fa-bars */
+    right: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    width: 150px;
+    z-index: 1000;
+}
+
+.dropdown-menu a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #007BFF;
+    font-size: 16px;
+}
+
+.dropdown-menu a:hover {
+    background-color: #007BFF;
+    color: #fff;
+}
+
+.dropdown-menu.active {
+    display: block; /* Hiển thị menu khi active */
+}
+
 h1 {
     color: #333;
     margin-bottom: 20px;
